Update api doc, api implementation complete, update db queries, correct typo, add model package for parsing and make predictions
