# service/webapi/api.py
@@ -1,10 +1,14 @@
-from fastapi import FastAPI, Header, HTTPException, Request
-from pydantic import BaseModel
+import json
+
+from fastapi import FastAPI, HTTPException, Request
 from .classes import *
 from .utility import load_db
 from fastapi.middleware.cors import CORSMiddleware
+from service.keystroke_recognition.model import load_model
 
 keystroke_database = load_db()
+keystroke_model = load_model('./fake/path/to/model.h5')
+
 app = FastAPI()
 app.add_middleware(
     CORSMiddleware,
@@ -13,12 +17,6 @@ app.add_middleware(
     allow_methods=["*"],
     allow_headers=["*"],
 )
-
-fake_db = {}
-
-
-class Data(BaseModel):
-    username: str
 
 
 # Middleware for returning all responses as JSON
@@ -29,22 +27,49 @@ async def set_response_content_type(request: Request, call_next):
     return response
 
 
-@app.post("/user/")
-def create_user(r: Request):
-    # Assume you generate a unique user ID and store it in the database
-    id = keystroke_database.insert_new_user("")
-    return {"id": id}
-
 @app.get('/users/')
-def get_users():
-    pass
+async def get_users(_: Request):
+    id_name_list = keystroke_database.get_all_users()
+    users = [User(_id, name) for _id, name in id_name_list]
+    return users
 
+
+@app.post("/user/")
+async def create_user(r: Request):
+    data = await r.body()
+    data = json.loads(data)
+    userid = keystroke_database.insert_new_user(data['nickname'])
+    for keystroke in data['keystrokes']:
+        # can be optimized using a single query
+        keystroke_database.insert_keystroke(userid, keystroke)
+
+    return userid
 
 
 @app.post("/users/{userid}/claim/")
-def claim_phrase(keystrokeid: int, keystrokes: list,
-                 XId: int = Header(..., description="App user id readable version ('semantic version' format)")):
-    # Assume you process the claim and return a result
-    claim_result = {"passed": True, "likelyhood": 0.95}
+async def claim_phrase(userid: int, r: Request):
+    data = await r.body()
+    keystroke = json.loads(data)
+
+    # check user existence
+    if not keystroke_database.user_exists(userid):
+        raise HTTPException(status_code=404, detail="user does not exist")
+
+    # make prediction
+    print(userid, keystroke)
+    claiming_probes = keystroke_database.get_user_probes(userid)
+
+    # predictions = []
+    # for probe in claiming_probes:
+    #     probe = json.loads(probe)
+    #     prediction = keystroke_model.predict(keystroke, probe)
+    #     predictions.append(prediction[0])
+
+    # likelihood = sum(predictions) / len(predictions)
+    # passed = likelihood > keystroke_model.threshold
+    # return prediction
+
+    passed, likelihood = keystroke_model.predict(keystroke, probe_data=claiming_probes.pop())
+    claim_result = {"passed": passed, "likelihood": likelihood}
 
     return claim_result
